--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> 
+<html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Profile Page</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <style>
-    /* Custom styles */
     body {
-      background:
-        linear-gradient(to right, #f2f2f2, #e0e0e0);
-      /* Lighter background for better contrast */
+      background: linear-gradient(to right, rgba(63, 92, 122, 0.8), rgba(255, 255, 255, 0.5)), 
+                  url('https://www.transparenttextures.com/patterns/light-paper.png');
+      background-size: cover;
+      background-attachment: fixed;
+      color: #333; /* Change text color for better readability */
     }
 
     .navbar {
-      background-color: #3F5C7A;
-      /* Deep blue navbar */
+      background-color: rgba(63, 92, 122, 0.8);
       color: #fff;
-      /* White text for better readability */
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
     .profile-container {
-      background-color: #f5f5f5;
-      /* Light gray background for the profile container */
+      background-color: rgba(245, 245, 245, 0.9);
       border-radius: 10px;
       box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
-      /* Subtle shadow for depth */
       padding: 40px;
-      transform: rotateY(0deg);
-      /* Removed initial tilt for a flat base */
       transition: transform 0.3s ease-in-out;
     }
 
     .profile-container:hover {
       transform: rotateY(-2deg);
-      /* Subtle tilt on hover for interaction */
     }
 
     .profile-pic {
@@ -42,38 +41,24 @@
       margin-bottom: 20px;
     }
 
-    .profile-info {
-      text-align: center;
-    }
-
     .button-container {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      flex-wrap: wrap;
-      /* Wrap projects on smaller screens */
-    }
-
-    .about-section,
-    .contact-section {
-      background-color: #f0f0f0;
-      /* Light gray background for the about and contact sections */
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      margin-top: 40px;
     }
 
     .project-card {
-      display: inline-block;
-      margin: 10px;
-      padding: 15px;
+      background-color: #fff;
       border-radius: 5px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      padding: 15px;
+      margin: 10px;
       text-align: center;
       position: relative;
-      /* Enable 3D effect */
       transition: transform 0.3s ease-in-out;
+      flex: 1 1 calc(45% - 20px);
+      max-width: 200px;
     }
 
     .project-card img {
@@ -85,69 +70,61 @@
 
     .project-card:hover {
       transform: translateY(-5px);
-      /* Slight upward shift on hover for 3D illusion */
     }
 
-    .project-card::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0,
-            0, 0));
-      /* Subtle dark overlay on hover */
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out;
+    .skills-section {
+      background-color: rgba(240, 240, 240, 0.9);
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      margin-top: 40px;
     }
 
-    .project-card:hover::after {
-      opacity: 0.3;
-      /* Reveal dark overlay on hover */
+    .social-button {
+      background-color: #3F5C7A;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 15px;
+      transition: background-color 0.3s;
     }
 
-    .project-card:nth-child(1) {
-      background-color: #FFB6C1;
-      /* Pastel pink for the first project */
+    .social-button:hover {
+      background-color: #2e4b63;
     }
 
-    .project-card:nth-child(2) {
-      background-color: #B5E0C3;
-      /* Pastel green for the second project */
+    .profile-info {
+      text-align: center;
+      margin-left: 20px; /* Space between image and text */
     }
 
-    .project-card:nth-child(3) {
-      background-color: #F5DEB3;
-      /* Pastel yellow for the third project */
+    .profile-name {
+      font-size: 1.8rem; /* Larger font size for the name */
+      font-weight: bold; /* Bold font weight */
     }
 
-    .project-card:nth-child(4) {
-      background-color: #FFD1DC;
-      /* Pastel pink for the fourth project */
+    .profile-course {
+      font-size: 1.2rem; /* Slightly larger font for the course */
+      color: #555; /* Grey color for course */
+      margin-bottom: 5px; /* Spacing below course */
     }
 
-    .project-card:nth-child(5) {
-      background-color: #B0E0E6;
-      /* Pastel blue for the fifth project */
-    }
+    /* Responsive adjustments */
+    @media (max-width: 768px) {
+      .project-card {
+        flex: 1 1 calc(100% - 20px);
+      }
 
-    .contact-section p {
-      display: flex;
-      align-items: center;
-      margin-bottom: 5px;
-    }
-
-    .contact-section p img {
-      width: 20px;
-      height: 20px;
-      margin-right: 10px;
+      .profile-info {
+        text-align: center; /* Center align on small screens */
+        margin-left: 0; /* Remove left margin */
+      }
     }
   </style>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-789DBC bg-789DBC">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Balogo's Profile</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -163,6 +140,9 @@
             <a class="nav-link" href="#about-section">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#skills-section">Skills</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#contact-section">Contact</a>
           </li>
         </ul>
@@ -172,59 +152,64 @@
 
   <div class="container mt-5">
     <div class="profile-container">
-      <div class="d-flex align-items-center">
+      <div class="d-flex align-items-center flex-column flex-md-row">
         <img src="https://i.pinimg.com/474x/ef/0a/e9/ef0ae9dc0010faf1821066efcde8ced2.jpg" class="profile-pic"
           width="150" height="150">
         <div class="profile-info">
-          <h2>Mark Christian O. Balogo</h2>
-          <p>Diploma in Information technology</p>
-          <p>3-1</p>
+          <h2 class="profile-name">Mark Christian O. Balogo</h2>
+          <p class="profile-course">Diploma in Information Technology</p>
+          <p class="profile-year">3-1</p>
         </div>
       </div>
-      <div class="button-container">
+      <div class="button-container mt-4">
         <div class="project-card">
           <img src="https://example.com/project1.jpg" alt="Project 1">
           <h4>Project 1</h4>
-          <p>Project 1</p>
+          <p>Project 1 Description</p>
         </div>
         <div class="project-card">
           <img src="https://example.com/project2.jpg" alt="Project 2">
           <h4>Project 2</h4>
-          <p>Project 2</p>
+          <p>Project 2 Description</p>
         </div>
         <div class="project-card">
           <img src="https://example.com/project3.jpg" alt="Project 3">
           <h4>Project 3</h4>
-          <p>Project 3</p>
+          <p>Project 3 Description</p>
         </div>
         <div class="project-card">
           <img src="https://example.com/project4.jpg" alt="Project 4">
           <h4>Project 4</h4>
-          <p>Project 4</p>
+          <p>Project 4 Description</p>
         </div>
         <div class="project-card">
           <img src="https://example.com/project5.jpg" alt="Project 5">
           <h4>Project 5</h4>
-          <p>Project 5</p>
+          <p>Project 5 Description</p>
         </div>
       </div>
     </div>
   </div>
 
-  <section id="about-section" class="about-section">
+  <section id="about-section" class="about-section mt-5">
     <h2>About Me</h2>
-    <p> I'm currently a student in Polytechnic University of the Philippines STB and taking DIT. This webpage is for my
-      project in Mobile Application Development</p>
+    <p>I'm currently a student at Polytechnic University of the Philippines, taking DIT. This webpage is for my project in Mobile Application Development.</p>
   </section>
 
-  <section id="contact-section" class="contact-section">
+  <section id="skills-section" class="skills-section mt-5">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML & CSS</li>
+      <li>JavaScript</li>
+      <li>Database Management</li>
+    </ul>
+  </section>
+
+  <section id="contact-section" class="contact-section mt-5">
     <h2>Contact</h2>
-    <p><img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/icons/envelope.svg" alt="Email icon">
-      christianbalogo7@gmail.com</p>
-    <p><img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/icons/telephone.svg" alt="Phone icon"> 09504322652
-    </p>
-    <p><img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/icons/geo-alt-fill.svg" alt="Location icon">
-      Tanauan City, Batangas</p>
+    <p><img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/icons/envelope.svg" alt="Email icon"> christianbalogo7@gmail.com</p>
+    <p><img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/icons/telephone.svg" alt="Phone icon"> 09504322652</p>
+    <p><img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/icons/geo-alt-fill.svg" alt="Location icon"> Tanauan City, Batangas</p>
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
