--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
   <section id="about-section" class="about-section mt-5">
     <h2>About Me</h2>
-    <p>I'm currently a student at Polytechnic University of the Philippines, taking DIT. This webpage is for my project in Mobile Application Development.</p>
+    <p>I'm currently a student at Polytechnic University of the Philippines taking Diploma in Information Technology. This webpage is for my project in Mobile Application Development.</p>
   </section>
 
   <section id="skills-section" class="skills-section mt-5">
