--- a/index.html
+++ b/index.html
@@ -161,12 +161,14 @@
           <p class="profile-year">3-1</p>
         </div>
       </div>
-      <div class="button-container mt-4">
-        <div class="project-card">
-          <img src="https://example.com/project1.jpg" alt="Project 1">
-          <h4>Project 1</h4>
-          <p>Project 1 Description</p>
-        </div>
+        <div class="button-container mt-4">
+    <div class="project-card">
+        <a href="kyoto.html" target="_blank">
+            <img src="images/kyoto.jpg" alt="Kyoto Project">
+            <h4>Project 1: Kyoto, Japan</h4>
+            <p>Discover the beauty and tradition of Japan’s ancient capital.</p>
+        </a>
+    </div>
         <div class="project-card">
           <img src="https://example.com/project2.jpg" alt="Project 2">
           <h4>Project 2</h4>
