--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="button-container mt-4">
     <div class="project-card">
         <a href="Project1/kyoto.html" target="_blank">
-            <img src="Images/kyoto.jpg" alt="Kyoto Project">
+            <img src="kyoto.jpg" alt="Kyoto Project">
             <h4>Project 1: Kyoto, Japan</h4>
             <p>Discover the beauty and tradition of Japan’s ancient capital.</p>
         </a>
