--- a/Project1/kyoto.html
+++ b/Project1/kyoto.html
@@ -108,14 +108,16 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <div class="container-fluid hero-section d-flex align-items-center justify-content-center">
-        <div class="container text-center">
-            <h1>Welcome to Kyoto</h1>
-            <p>Explore the beauty and tradition of Japan’s ancient capital.</p>
-            <a href="sites.html" class="btn btn-primary mt-3">Discover More</a>
-        </div>
-    </div>
+    
+   <div class="container-fluid text-center text-white d-flex align-items-center justify-content-center"
+     style="background-image: url('images/kyoto.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 100vh; color: white; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);">
+  <div class="container">
+    <h1>Welcome to Kyoto</h1>
+    <p>Explore the beauty and tradition of Japan’s ancient capital.</p>
+    <a href="sites.html" class="btn btn-primary mt-3">Discover More</a>
+  </div>
+</div>
+
 
     <!-- Main Content -->
     <div class="container main-content mt-5">
