--- a/Project1/kyoto.html
+++ b/Project1/kyoto.html
@@ -110,7 +110,7 @@
 
     
    <div class="container-fluid text-center text-white d-flex align-items-center justify-content-center"
-     style="background-image: url('images/kyoto.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 100vh; color: white; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);">
+     style="background-image: url('Images/kyoto.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 100vh; color: white; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);">
   <div class="container">
     <h1>Welcome to Kyoto</h1>
     <p>Explore the beauty and tradition of Japan’s ancient capital.</p>
