--- a/Project1/kyoto.html
+++ b/Project1/kyoto.html
@@ -121,7 +121,7 @@
     <!-- Main Content -->
     <div class="container main-content mt-5">
         <h2 class="text-center">About Kyoto</h2>
-        <p>Kyoto, the heart of Japan's culture and history, is known for its stunning temples, beautiful gardens, and traditional tea houses. With seasonal cherry blossoms and colorful autumn leaves, Kyoto offers an immersive experience of Japanese heritage.</p>
+        <p class="text-center">Kyoto, the heart of Japan's culture and history, is known for its stunning temples, beautiful gardens, and traditional tea houses. With seasonal cherry blossoms and colorful autumn leaves, Kyoto offers an immersive experience of Japanese heritage.</p>
     </div>
 
     <!-- Footer -->
