--- a/Project1/kyoto.html
+++ b/Project1/kyoto.html
@@ -33,7 +33,7 @@
 
         /* Hero Section Styling */
         .hero-section {
-            background-image: url('https://www.bing.com/images/search?view=detailV2&ccid=tgGm5Kk%2b&id=C6B1364CE28F580C71EEC521022880CE74F6D815&thid=OIP.tgGm5Kk-BGTmh1MjR0A9mQHaE1&mediaurl=https%3a%2f%2fthumbs.dreamstime.com%2fb%2fsunrise-landscape-kyoto-japanese-street-lights-traditional-white-umbrellas-177058573.jpg&exph=522&expw=800&q=kyoto+landscape+720&FORM=IRPRST&ck=8658FD5119CA22D0C4CB9D96A719D763&selectedIndex=7&itb=0');
+            background-image: src('Images/kyoto.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
