--- a/Project1/kyoto.html
+++ b/Project1/kyoto.html
@@ -87,6 +87,18 @@
         .hero-section img:hover {
             transform: scale(1.1);
         }
+        .btn-primary {
+            background-color: #3F5C7A;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+        
+        .btn-primary:hover {
+            background-color: #2e4b63;
+        }
     </style>
 </head>
 
@@ -123,6 +135,11 @@
         <h2 class="text-center">About Kyoto</h2>
         <p class="text-center">Kyoto, the heart of Japan's culture and history, is known for its stunning temples, beautiful gardens, and traditional tea houses. With seasonal cherry blossoms and colorful autumn leaves, Kyoto offers an immersive experience of Japanese heritage.</p>
     </div>
+
+    <div class="container text-center mt-4">
+    <a href="index.html" class="btn btn-primary">Back to Profile</a>
+    </div>
+
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4 mt-5">
