--- a/Project1/kyoto.html
+++ b/Project1/kyoto.html
@@ -33,7 +33,7 @@
 
         /* Hero Section Styling */
         .hero-section {
-            background-image: src('Images/kyoto.jpeg');
+            background-image: url('Images/kyoto.jpeg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
