--- a/Project1/kyoto.html
+++ b/Project1/kyoto.html
@@ -137,7 +137,7 @@
     </div>
 
     <div class="container text-center mt-4">
-    <a href="mcbalogo.github.io" class="btn btn-primary">Back to Profile</a>
+    <a href="index.html" class="btn btn-primary">Back to Profile</a>
     </div>
 
 
