--- a/index.html
+++ b/index.html
@@ -182,11 +182,15 @@
             <p>Discover the beauty and tradition of Japan’s ancient capital.</p>
           </a>
         </div>
-        <!-- Project 2 -->
+     
+       <div class="button-container mt-4">
+       <!-- Project 2 -->
         <div class="project-card">
-          <img src="https://example.com/project2.jpg" alt="Project 2">
-          <h4>Project 2</h4>
-          <p>Project 2 Description</p>
+          <a href="Midterm_API/main.html" target="_blank">
+            <img src="Midterm_API/map.jpg" alt="Midterm Project">
+            <h4>Midterm: Country API</h4>
+            <p>Discover every Country in the world</p>
+          </a>
         </div>
         <!-- Project 3 -->
         <div class="project-card">
