--- a/index.html
+++ b/index.html
@@ -190,6 +190,30 @@
             <p>Discover every Country in the world</p>
           </a>
         </div>
+        <!-- Project 3 -->
+        <div class="project-card">
+          <a href="file.html" target="_blank">
+            <img src="img.jpg" alt="Project">
+            <h4>Project: Project 3</h4>
+            <p>Description of the project</p>
+          </a>
+        </div>
+        <!-- Project 4 -->
+        <div class="project-card">
+          <a href="file.html" target="_blank">
+            <img src="img.jpg" alt="Project">
+            <h4>Project: Project 4</h4>
+            <p>Description of the project</p>
+          </a>
+        </div>
+        <!-- Project 5 -->
+        <div class="project-card">
+          <a href="file.html" target="_blank">
+            <img src="img.jpg" alt="Project">
+            <h4>Project: Project 5</h4>
+            <p>Description of the project</p>
+          </a>
+        </div>
       </div>
     </div>
   </div>
