--- a/404.html
+++ b/404.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>error-text</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <style>
   /* General styles */
@@ -188,7 +187,7 @@
         <span>404 PAGE</span>
         <p class="p-a">. The page you were looking for could not be found</p>
         <p class="p-b">... Back to previous page</p>
-        <a href='#' class="back">... Back to previous page</a>
+        <a href='index.html' class="back">... Back to previous page</a>
     </div>
   </div>
 
