--- a/404.html
+++ b/404.html
@@ -187,7 +187,7 @@
         <span>404 PAGE</span>
         <p class="p-a">. The page you were looking for could not be found</p>
         <p class="p-b">... Back to previous page</p>
-        <a href='index.html' class="back">... Back to previous page</a>
+        <a href='/' class="back">... Back to previous page</a>
     </div>
   </div>
 
